--- a/unit_5_oop/pom.xml
+++ b/unit_5_oop/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ua.com.alevel</groupId>
-    <artifactId>unit_5_oop</artifactId>
+    <artifactId>unit_6_exception</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
